gccida/c0/instrument_edges
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/instrument_edges/src/profile.c:603:1: error: use of undeclared identifier 'edge_info_0'
edge_info_0 *inf; // [rsp+30h] [rbp-30h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/instrument_edges/src/profile.c:603:14: error: use of undeclared identifier 'inf'; did you mean 'if'?
edge_info_0 *inf; // [rsp+30h] [rbp-30h] 
             ^~~
             if
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/instrument_edges/src/profile.c:603:14: error: expected expression
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/instrument_edges/src/profile.c:628:1: error: use of undeclared identifier 'inf'
inf = ( edge_info_0 *)e->aux; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/instrument_edges/src/profile.c:628:22: error: expected expression
inf = ( edge_info_0 *)e->aux; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/instrument_edges/src/profile.c:628:9: error: use of undeclared identifier 'edge_info_0'
inf = ( edge_info_0 *)e->aux; 
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/instrument_edges/src/profile.c:629:19: error: use of undeclared identifier 'inf'; did you mean 'int'?
if ( ( *( _BYTE *)inf & 4) == 0 && ( *( _BYTE *)inf & 2) == 0 ) 
                  ^~~
                  int
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/instrument_edges/src/profile.c:629:19: error: expected expression
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/instrument_edges/src/profile.c:629:49: error: use of undeclared identifier 'inf'; did you mean 'int'?
if ( ( *( _BYTE *)inf & 4) == 0 && ( *( _BYTE *)inf & 2) == 0 ) 
                                                ^~~
                                                int
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/instrument_edges/src/profile.c:629:49: error: expected expression
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/instrument_edges/src/profile.c:638:7: error: use of undeclared identifier 'arg0'
v1 = &arg0; 
      ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/instrument_edges/src/obj/profile.o] Error 1
